# fastcounter

./: .gitignore  .mergify.yml  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yaml
fastcounter/: __init__.py  test_counter.py
