[metadata]
name = fastcounter
license = Apache 2.0
url = https://github.com/jd/fastcounter
summary = Fast thread-safe counters
long_description = Provides thread-safe implementations of counter classes.
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/jd/fastcounter
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = fastcounter

[tool:pytest]
filterwarnings =
    # Show any DeprecationWarnings once
    once::DeprecationWarning
